--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <header>
-    <h1>NASA Photo of the Day</h1>
+    <h1>Astronomy Photo Of The Day</h1>
   </header>
 
   <div id="root"></div>
